# playx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: application_state.cpp  application_state.h  brush.cpp  brush.h  color_picker.h  colorwheel_inside_widget.cpp  colorwheel_inside_widget.h  colorwheel_widget.cpp  colorwheel_widget.h  keyframe.cpp  keyframe.h  keyframe_container.cpp  keyframe_container.h  layer.cpp  layer.h  layer_container.cpp  layer_container.h  main.cpp  main_window.cpp  main_window.h  painter_widget.cpp  painter_widget.h  timeline.cpp  timeline.h  timeline_widget.cpp  timeline_widget.h  timer.h  unit_frame.cpp  unit_frame.h
